# mipt2024f-4-koshelev-a-tech

./: .gitignore  .gitmodules  README.md
pd2023a-cuda/: .gitignore  README.md
pd2023a-cuda/data/: exec.py
pd2023a-cuda/include/: CommonKernels.cuh  KernelAdd.cuh
pd2023a-cuda/runners/: 01-add.cu  02-mul.cu  03-matrix-add.cu  04-matrix-vector-mul.cu  05-scalar-mul.cu  06-cosine-vector.cu  07-matrix-mul.cu
pd2023a-cuda/src/: CosineVector.cu  KernelAdd.cu  KernelMatrixAdd.cu  KernelMul.cu  MatrixMul.cu  MatrixVectorMul.cu  ScalarMul.cu  ScalarMulRunner.cu
pd2023a-mpi/: CMakeLists.txt  README.md
pd2023a-mpi/data/: data_mpi.csv  data_mpi_omp.csv  data_omp.csv  hw_1.ipynb
pd2023a-mpi/src/: mpi.cxx  mpi_omp.cxx  omp.cxx
studoko/: .gitlab-ci-build.yml  .gitlab-ci-deploy.yml  Dockerfile  deploy-playbook.yml
